--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding-top: 10px;
+  padding-left: 50px;
+  margin: 0;
+  background: black;
   display: flex;
   flex-direction: column;
+}
+
+.row_data {
+  margin-bottom: 5px;
+}
+
+/* List */
+.game_container {
+  counter-reset: index;  
+  padding: 0;
+  max-width: 800px;
+}
+
+/* List element */
+.game_data {
+  counter-increment: index; 
+  display: flex;
+  align-items: center;
+  padding: 12px 0;
+  box-sizing: border-box;
+  background-image: linear-gradient(to bottom, aquamarine, orangered);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 20px;
+}
+
+/* Element counter */
+.game_data::before {
+  content: counters(index, ".", decimal-leading-zero);
+  font-size: 1.5rem;
+  font-weight: bold;
+  min-width: 50px;
+  padding-right: 12px;
+  font-variant-numeric: tabular-nums;
+  align-self: flex-start;
+  background-image: linear-gradient(to bottom, aquamarine, orangered);
+  background-attachment: fixed;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+}
+
+span {
+  color: aquamarine;
+  font-weight: 600;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+
+/* Element separation */
+.game_data + li {
+  border-top: 1px solid rgba(255,255,255,0.2);
+}
+
+#result {
+  border: 1px dotted #ccc;
+  padding: 3px;
+  background: white;
+  color: gray;
+}
+#result ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+#result ul li {
+  padding: 5px 0;
+}
+#result ul li:hover {
+  background: #eee;
+}
+
+.top_container {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    padding: 10px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  padding: 10px;
 }
